# Finding-Donors-Project

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/skills/business-understanding/: SKILL.md
configs/: base.yaml
docs/: Analyze_Finding_Donors_from_Udacity.md  FINDING_DONORS_CRISPDM.md  Finding_Donors_Project.md  Hypothesis_Map.md  README_didatico_finding_donors.md  explanations.md  finding_donors.html  guia_hipoteses_analiticas_finding_donors.md  ml_workflow_architecture.md  narrativa_analitica_finding_donors.md  recomendacoes_arquitetura_stack.md  revisao_tecnica_notebook.md
figs/: fontlist-v390.json
notebooks/: finding_donors.ipynb  finding_donors_crispdm.ipynb  finding_donors_version_study.ipynb
scripts/: fix_notebook.py  run_pipeline.py  run_train.py
src/: config.py  data_loader.py  evaluate.py  features.py  pipeline.py  preprocessing.py  train.py  tuning.py
src/finding_donors/: __init__.py  pipeline.py
src/finding_donors/core/: __init__.py  config.py  logging.py
src/finding_donors/data/: __init__.py  contracts.py  ingest.py  split.py
src/finding_donors/evaluation/: __init__.py  metrics.py  reporting.py  threshold.py
src/finding_donors/features/: __init__.py  engineering.py  preprocessing.py
src/finding_donors/models/: __init__.py  catalog.py  persistence.py  train.py  tuning.py
tests/: test_config.py  test_data_contract.py  test_feature_engineering.py
